<resources>
    <string name="app_name">Artflowers App</string>
    <string name="st_add_to">в корзину</string>
    <string name="st_same_flowers">Похожие товары:</string>
    <string name="dialogTitle">Удаление публикации</string>
    <string name="dialogMessage">Вы действительно хотите безвозвратно удалить данную публикацию?</string>
    <string name="ad_no">Отмена</string>
    <string name="ad_yes">Удалить</string>
    <string name="dialog_title_set_new">Публикация продукта</string>
    <string name="dialog_message_set_new">Вы действительно хотите опубликовать данный продукт?</string>
    <string name="ad_yes_set_new">Опубликовать</string>
    <string name="st_som"> сом</string>
    <string name="st_themes">Темы</string>
    <string name="st_dark_th">Тёмная</string>
    <string name="st_light_th">Светлая</string>
    <string name="st_settings">Настройки</string>
    <string name="st_zakazy">Заказы</string>
    <string name="st_curency">Валюта</string>
    <string name="st_language">Язык</string>
    <string name="st_about_app">О приложении</string>
    <string name="st_help">Помощь</string>
    <string name="st_zapolnite_anketu">Заполните анкету</string>
    <string name="st_change_photo">выберите изображение</string>
    <string name="st_set_name_pr">введите название товара</string>
    <string name="st_set_price_pr">введите стоимость товара</string>
    <string name="st_set_sostav_pr">введите состав товара</string>
    <string name="st_set_size_pr">введите размер товара</string>
    <string name="st_set_description_pr">введите описание товара</string>
    <string name="st_set_tel_number">введите номер телефона</string>
    <string name="st_set_instagram_acc">введите instagram аккаунт</string>
    <string name="st_public">опубликовать</string>
    <string name="st_set_request">введите запрос..</string>
    <string name="st_result_for_request">Результаты по запросу:</string>
    <string name="st_my_publication">Мои публикации:</string>
    <string name="st_russian">Русский</string>
    <string name="st_english">English</string>
    <string name="st_all">Все:</string>
    <string name="st_composition">Состав</string>
    <string name="st_size">Размер</string>
    <string name="st_contact_with_me">Cвязаться с нами:</string>
    <string name="st_kgs">KGS</string>
    <string name="st_rub">RUB</string>
    <string name="st_usd">USD</string>
    <string name="st_in_basket">В корзине :</string>
</resources>