<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/backround_black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/st_zapolnite_anketu"
                android:textColor="@color/white_hint_text"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/st_change_photo"
                android:textColor="@color/white_hint_text"
                android:textSize="14sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@color/white_hint_text"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/st_set_name_pr"
                android:textColor="@color/white_hint_text"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/st_set_price_pr"
                android:textColor="@color/white_hint_text"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_add_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/st_set_sostav_pr"
                android:textColor="@color/white_hint_text"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_add_composition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/st_set_size_pr"
                android:textColor="@color/white_hint_text"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_add_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/st_set_description_pr"
                android:textColor="@color/white_hint_text"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/st_set_tel_number"
                    android:textColor="@color/white_hint_text"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/et_add_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/et_add_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_baseline_phone_24"
                    app:layout_constraintBottom_toBottomOf="@id/et_add_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_add_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/st_set_tel_number"
                    android:textColor="@color/white_hint_text"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/et_add_wa_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/et_add_wa_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_phone_wa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_phone_wa"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_whatsapp"
                    app:layout_constraintBottom_toBottomOf="@id/et_add_wa_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_add_wa_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/st_set_instagram_acc"
                    android:textColor="@color/white_hint_text"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/et_add_insta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/et_add_insta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_instagram"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_instagram"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_instagram"
                    app:layout_constraintBottom_toBottomOf="@id/et_add_insta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_add_insta" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ready"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bg_add_two"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/st_public"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>